--- a/index.html
+++ b/index.html
@@ -1,19 +1,30 @@
-<html>
-    <head>
-      <title>Code Editor</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-
-      <link rel="stylesheet" href="style.css">
-    </head>
-
-    <body>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+</head>
+<body>
+    <div id="sidebar">
+        <div class="toggle-btn" onclick="toggleSidebar();">
+            &#9776;
+        </div>
+        <ul>
+            <li>Add Javascript cdn</li>
+            <li>Add CSS cdn</li>
+            <li>include bootstrap</li>
+            <li>include external libraries</li>
+        </ul>
+    </div>
+    <div id="editor">
       <textarea id="html" placeholder="HTML"></textarea>
       <textarea id="css" placeholder="CSS"></textarea>
       <textarea id="js" placeholder="JavaScript"></textarea>
       <iframe id="code"></iframe>
-
-      <script type="text/javascript" src="app.js"></script>
-
-    </body>
-  </html>
+    </div>
+    <script type="text/javascript" src="app.js"></script>
+</body>
+</html>
